Add new pipe for generic enum to title case transformation

--- a/client/src/app/forms/flags/forms/flag-add/flag-add.form.html
+++ b/client/src/app/forms/flags/forms/flag-add/flag-add.form.html
@@ -39,7 +39,7 @@
                   nzType="primary"
                   nzSize="small"
                   [disabled]="!formGroup.valid || !viewer.signedIn">
-                  Flag {{ this.flaggable.entityType }}
+                  Flag {{ this.flaggable.entityType | enumToTitle }}
                 </button>
               </ng-template>
             </cvc-org-selector-btn-group>
