--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -1,7 +1,16 @@
 <ng-container *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noRevisions">
   <nz-row [nzGutter]="16">
     <nz-col nzSpan="18">
-      <cvc-revision-list [revisions]="revisions$ | ngrxPush" (revisionSetSelectedEvent)="onRevisionSetSelected($event)" (revisionMutationCompleted)="refresh()"></cvc-revision-list>
+      <nz-space nzDirection="vertical">
+        <nz-space-item>
+          <cvc-revision-list [revisions]="revisions$ | ngrxPush" (revisionSetSelectedEvent)="onRevisionSetSelected($event)" (revisionMutationCompleted)="refresh()"></cvc-revision-list>
+        </nz-space-item>
+        <ng-container *ngrxLet="pageInfo$ as pageInfo">
+          <nz-space-item  *ngIf="pageInfo?.hasNextPage">
+            <button nz-button nzBlock nzType="default" (click)="loadMore(pageInfo?.endCursor)">Load More</button>
+          </nz-space-item>
+        </ng-container>
+      </nz-space>
     </nz-col>
     <nz-col nzSpan="6">
       <nz-space nzDirection="vertical" *ngIf="this.filteredSet">
