--- a/client/src/app/forms/flags/forms/flag-resolve/flag-resolve.form.html
+++ b/client/src/app/forms/flags/forms/flag-resolve/flag-resolve.form.html
@@ -55,7 +55,7 @@
       </li>
     </ul>
   </ng-template>
-  <nz-card nzType="inner">
+  <nz-card style="width:300px;" nzType="inner">
     <form nz-form
       [formGroup]="formGroup"
       (ngSubmit)="resolveFlag(formModel)"
