--- a/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
+++ b/client/src/app/components/revisions/revision-list-diff/revision-list-diff.component.html
@@ -18,7 +18,7 @@
     <nz-space nzDirection="vertical">
       <nz-space-item>
       <!-- show removed items -->
-      <nz-list nzHeader="Removed {{ entityType }}" nzBordered nzType="inner" nzSize="small">
+      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Removed {{ entityType }}" nzBordered nzType="inner" nzSize="small">
         <nz-list-item *ngFor="let item of this.diffObject.removedObjects" ngClass="removed">
           <span nz-typography>
             <ng-container
@@ -47,7 +47,7 @@
       </nz-list>
       </nz-space-item>
       <nz-space-item>
-      <nz-list nzHeader="Kept {{ entityType }}" nzBordered nzType="inner" nzSize="small">
+      <nz-list *ngIf="this.diffObject.currentObjects.length > 0" nzHeader="Kept {{ entityType }}" nzBordered nzType="inner" nzSize="small">
         <nz-list-item *ngFor="let item of this.diffObject.keptObjects" ngClass="kept">
           <span nz-typography>
             <ng-container
