update import paths for less files

--- a/client/src/themes/default.less
+++ b/client/src/themes/default.less
@@ -46,4 +46,4 @@
 @primary-10: color(~`colorPalette('@{primary-color}', 10) `); // unused
 
 // PUT CUSTOM GLOBALS IN global-variables.less
-@import 'global-variables.less';
+@import 'themes/global-variables.less';
