--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -1,4 +1,4 @@
-@import 'global-variables.less';
+@import 'themes/global-variables.less';
 
 :host {
   // remove default popover padding so that component edges are flush with popover border
