custom formatter for timeago module

--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -32,7 +32,7 @@
         <span>{{user.displayName}}</span>
       </ng-template>
     </cvc-participant-list>
-    <nz-card nzTitle="Curators Mentioned" nz-type="inner" style="margin-bottom: 1em">
+    <!-- <nz-card nzTitle="Curators Mentioned" nz-type="inner" style="margin-bottom: 1em">
       <nz-space nzDirection="vertical" style="width: 100%">
         <nz-space-item>
           <nz-skeleton [nzAvatar]="true" [nzParagraph]="{ rows: 0 }"></nz-skeleton>
@@ -51,7 +51,7 @@
           <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
         </nz-list-item>
       </nz-list>
-    </nz-card>
+    </nz-card> -->
 
   </nz-col>
 </nz-row>
