--- a/client/src/app/forms/comments/forms/comment-add/comment-add.form.html
+++ b/client/src/app/forms/comments/forms/comment-add/comment-add.form.html
@@ -11,7 +11,7 @@
     </ng-container>
     <formly-form [form]="formGroup"
       [fields]="formFields"
-      [model]="formModel"
+      [(model)]="formModel"
       [options]="formOptions"></formly-form>
     <nz-form-item>
       <nz-form-control>
