Add a comment preview option

--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -1,24 +1,32 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="18">
-    <nz-card nzTitle="Comments">
-      <nz-list [nzDataSource]="comments$ | ngrxPush" [nzLoading]="loading$ | ngrxPush" [nzRenderItem]="comment"
-        nzSize="small" nzItemLayout="horizontal">
-        <nz-list-header *ngIf="pageInfo$ | ngrxPush as pageInfo">
-          <div nz-list-load-more *ngIf="pageInfo.hasPreviousPage">
-            <button nz-button nzType="link" nzSize="small" nzBlock (click)="onLoadMore(pageInfo.startCursor)">Load older
-              comments</button>
-          </div>
-        </nz-list-header>
-        <ng-template #comment let-comment>
-          <nz-list-item>
-            <cvc-comment-display [comment]="comment"></cvc-comment-display>
-          </nz-list-item>
-        </ng-template>
-      </nz-list>
-      <ng-container *ngIf="viewer$ | ngrxPush as viewer">
-        <cvc-comment-add id="addComment" *ngIf="viewer.canCurate" [subject]="commentable" (commentAddedEvent)="refreshList()" ></cvc-comment-add>
-      </ng-container>
-    </nz-card>
+    <nz-space nzDirection="vertical" style="width: 100%">
+      <nz-space-item>
+        <nz-card nzTitle="Comments">
+          <nz-list [nzDataSource]="comments$ | ngrxPush" [nzLoading]="loading$ | ngrxPush" [nzRenderItem]="comment"
+            nzSize="small" nzItemLayout="horizontal">
+            <nz-list-header *ngIf="pageInfo$ | ngrxPush as pageInfo">
+              <div nz-list-load-more *ngIf="pageInfo.hasPreviousPage">
+                <button nz-button nzType="link" nzSize="small" nzBlock (click)="onLoadMore(pageInfo.startCursor)">Load older
+                  comments</button>
+              </div>
+            </nz-list-header>
+            <ng-template #comment let-comment>
+              <nz-list-item>
+                <cvc-comment-display [comment]="comment"></cvc-comment-display>
+              </nz-list-item>
+            </ng-template>
+          </nz-list>
+        </nz-card>
+      </nz-space-item>
+      <nz-space-item>
+        <nz-card>
+          <ng-container *ngIf="viewer$ | ngrxPush as viewer">
+            <cvc-comment-add id="addComment" *ngIf="viewer.canCurate" [subject]="commentable" (commentAddedEvent)="refreshList()" ></cvc-comment-add>
+          </ng-container>
+        </nz-card>
+      </nz-space-item>
+    </nz-space>
   </nz-col>
   <nz-col nzSpan="6">
     <cvc-participant-list listTitle="Commenters" [participantList]="participants$ | ngrxPush"
