--- a/client/src/app/components/comments/comment-display/comment-display.component.html
+++ b/client/src/app/components/comments/comment-display/comment-display.component.html
@@ -5,6 +5,6 @@
         <nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar>
     </ng-template>
     <nz-comment-content>
-        <p>{{ comment.comment }}</p>
+        <cvc-comment-body [commentBodySegments]="comment.parsedComment"></cvc-comment-body>
     </nz-comment-content>
 </nz-comment>
