--- a/client/src/app/forms/comments/forms/comment-add/comment-add.form.html
+++ b/client/src/app/forms/comments/forms/comment-add/comment-add.form.html
@@ -1,6 +1,5 @@
 <form nz-form
-  [formGroup]="formGroup"
-  (ngSubmit)="submitComment(formModel)"
+  (ngSubmit)="submitComment()"
   nzLayout="vertical">
   <ng-container *ngIf="(submitError$ | async) as errors">
     <nz-form-item *ngIf="errors.length > 0">
@@ -8,22 +7,7 @@
       </cvc-form-errors-alert>
     </nz-form-item>
   </ng-container>
-  <nz-tabset [nzAnimated]="false">
-    <nz-tab nzTitle="Write">
-        <formly-form [form]="formGroup"
-          [fields]="formFields"
-          [(model)]="formModel"
-          [options]="formOptions"></formly-form>
-    </nz-tab>
-    <nz-tab nzTitle="Preview" (nzClick)="this.onPreviewButtonClicked()">
-      <ng-container *ngIf="(previewLoading$ | ngrxPush) as loading">
-        <nz-spin nzTip="Loading..."></nz-spin>
-      </ng-container>
-      <ng-container *ngIf="(previewComment$ | ngrxPush) as previewComment">
-        <cvc-comment-body [commentBodySegments]="previewComment"></cvc-comment-body>
-      </ng-container>
-    </nz-tab>
-  </nz-tabset>
+  <cvc-comment-input [(comment)]="commentText"></cvc-comment-input>
   <nz-form-item>
     <nz-form-control>
       <cvc-form-buttons>
@@ -33,7 +17,7 @@
             cvcOrgSelectorBtn
             nzType="primary"
             nzSize="small"
-            [disabled]="!formGroup.valid">
+            [disabled]="!(this.commentText !== undefined && this.commentText.length >= 10)">
             Add Comment
           </button>
         </cvc-org-selector-btn-group>
